--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -57,7 +57,10 @@
     <link rel="preconnect" href="https://fonts.gstatic.com/" crossorigin>
     <script src="https://kit.fontawesome.com/934a9b1b6c.js" crossorigin="anonymous"></script>
 
-
+<!-- navbar 2 -->
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/js/bootstrap.min.js"></script>
       </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
